--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 :root {
-  --app-color-background: black;
-  --app-color-text: white;
+  --app-color-background: #f2f2f2;
+  --app-color-text: black;
   --app-color-selected: #bedbca54;
   --app-color-border: #80808033;
 }
