Minor styling fixes

--- a/src/components/SongsList/SongsList.scss
+++ b/src/components/SongsList/SongsList.scss
@@ -1,5 +1,5 @@
 .songs-list-component {
-  padding: 1rem;
-  max-height: calc(100vh - 60px);
+  padding: 0 0 1rem;
+  max-height: calc(100vh - 400px);
   overflow-y: scroll;
 }
