--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -2,6 +2,7 @@
   height: 400px;
   background: black;
   color: white;
+
   &__content {
     height: 100%;
     display: flex;
@@ -53,6 +54,27 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+      }
+    }
+  }
+}
+
+// responsiveness
+@media (max-width: 768px) {
+  .hero-component {
+    &__content {
+      flex-direction: column;
+      position: relative;
+
+      &__playing-now {
+        position: absolute;
+        max-width: 100%;
+
+        left: 0%;
+        bottom: 0;
+      }
+      &__thumbnail {
+        flex: 1;
       }
     }
   }
