Improved responsive behavir

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,4 +3,5 @@
   --app-color-text: black;
   --app-color-selected: #bedbca54;
   --app-color-border: #80808033;
+  --app-color-crystal-black: #10101082;
 }
