--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -59,7 +59,7 @@
   }
 }
 
-// responsiveness
+// tablet view
 @media (max-width: 768px) {
   .hero-component {
     &__content {
@@ -69,13 +69,25 @@
       &__playing-now {
         position: absolute;
         max-width: 100%;
-
+        width: 100%;
+        background: var(--app-color-crystal-black);
+        padding: 1rem;
         left: 0%;
         bottom: 0;
       }
+
       &__thumbnail {
         flex: 1;
       }
+    }
+  }
+}
+
+// mobile view
+@media (max-width: 450px) {
+  .hero-component__content__playing-now {
+    &__label {
+      font-size: 1.25rem;
     }
   }
 }
