--- a/src/components/SongListItem/SongListItem.scss
+++ b/src/components/SongListItem/SongListItem.scss
@@ -48,11 +48,23 @@
     }
   }
 
+  // Tablet view
   @media (max-width: 760px) {
     padding: 1rem;
-
     &__song-info {
       margin: 0 1rem;
+    }
+  }
+
+  // mobile view
+  @media (max-width: 450px) {
+    &__song-info {
+      &__name {
+        font-size: 1rem;
+      }
+      &__artist {
+        font-size: 0.8rem;
+      }
     }
   }
 }
